--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -39,28 +39,46 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="180dp"
-                            android:layout_height="150dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
                             android:gravity="center"
-                            android:orientation="horizontal"
-                            android:padding="10dp">
+                            android:orientation="vertical">
 
-                            <ImageView
-                                android:id="@+id/thumbnail"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_alignParentLeft="true"
-                                android:layout_alignParentTop="true"
-                                android:layout_marginRight="16dp"
-                                android:adjustViewBounds="false"
-                                android:cropToPadding="false" />
+                            <LinearLayout
+                                android:layout_width="150dp"
+                                android:layout_height="120dp"
+                                android:gravity="center"
+                                android:orientation="horizontal"
+                                android:padding="10dp">
+
+                                <ImageView
+                                    android:id="@+id/thumbnail"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_marginRight="16dp"
+                                    android:adjustViewBounds="false"
+                                    android:cropToPadding="false" />
+
+                            </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/transmission"
+                                android:layout_toRightOf="@+id/thumbnail"
+                                android:text="price"
+                                android:textSize="20sp"
+                                android:textStyle="normal|bold" />
 
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="186dp"
                             android:layout_height="wrap_content"
-                            android:gravity="top"
+                            android:gravity="top|center"
                             android:orientation="vertical"
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp">
@@ -70,7 +88,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Type:"
+                                android:text="Type"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -88,7 +106,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Brand:"
+                                android:text="Brand"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -106,7 +124,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Model:"
+                                android:text="Model"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -131,29 +149,12 @@
 
                             <TextView
                                 android:id="@+id/rental_name"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_below="@+id/color"
                                 android:layout_toRightOf="@+id/thumbnail"
                                 android:text="rental_name" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Price:"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/price"
-                                android:layout_width="86dp"
-                                android:layout_height="match_parent"
-                                android:layout_below="@+id/transmission"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="price" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -184,7 +185,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:gravity="top"
+                            android:gravity="top|center"
                             android:orientation="vertical"
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp">
@@ -194,7 +195,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Plate:"
+                                android:text="Plate"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -212,7 +213,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Rating:"
+                                android:text="Rating"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -230,7 +231,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Capacity:"
+                                android:text="Capacity"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -248,7 +249,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Transmission:"
+                                android:text="Transmission"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -267,7 +268,7 @@
                         <LinearLayout
                             android:layout_width="104dp"
                             android:layout_height="match_parent"
-                            android:gravity="top"
+                            android:gravity="top|center"
                             android:orientation="vertical"
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp">
@@ -277,7 +278,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Doors:"
+                                android:text="Doors"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -295,7 +296,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Color:"
+                                android:text="Color"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -313,7 +314,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentTop="true"
                                 android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Kms:"
+                                android:text="Kms"
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
