--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -76,7 +76,7 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="186dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="top|center"
                             android:orientation="vertical"
