--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="@drawable/gradient">
+    android:background="@drawable/gradient"
+    tools:showIn="@layout/activity_coordinator_main">>
+
 
     <LinearLayout
         android:id="@+id/values_container"
@@ -120,5 +122,6 @@
         android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
+
 
 </LinearLayout>
