add: Login validation in views that required

--- a/app/src/main/res/layout/activity_show_bookings.xml
+++ b/app/src/main/res/layout/activity_show_bookings.xml
@@ -239,7 +239,7 @@
                         android:layout_height="wrap_content"
                         android:accessibilityHeading="false"
                         android:backgroundTint="@color/colorPrimary"
-                        android:text="Cancelar reserva"
+                        android:text="Cancel Booking"
                         android:textColor="#ffffff"
                         android:textSize="10sp" />
 
